# zanzibarr

./: .gitignore  README.md  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: android-build.yml  windows-build.yml
android/app/: build.gradle.kts
docs/: CNAME  index.html
integration_test/: dolby_vision_test.dart  keychain_test.dart  simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_fa.arb  app_fr.arb  app_hi.arb  app_it.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fa.dart  app_localizations_fr.dart  app_localizations_hi.dart  app_localizations_it.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_pt.dart  app_localizations_ru.dart  app_localizations_tr.dart  app_localizations_zh.dart  app_pt.arb  app_ru.arb  app_tr.arb  app_zh.arb
lib/player/: advanced_playback_controller.dart  gyuni_player_controls.dart  media_preferences.dart  picture_in_picture_window.dart  playback_startup_guard.dart  player_keyboard_controls.dart  player_screen.dart  smart_canvas.dart  smart_canvas_overlay.dart  subtitle_controls_overlay.dart
lib/settings/: provider_settings.dart  settings_screen.dart  ui_preferences.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs  streaming.rs
rust/src/engine/: archive.rs  locator.rs  mod.rs  nntp_source.rs  nzb.rs  rar.rs  rarcrypt.rs  server.rs  sevenzip.rs  yenc.rs
rust/src/engine/nntp/: connection.rs  mod.rs  pool.rs
rust/tests/fixtures/rar5hp/: hp_multi.part1.rar  hp_multi.part2.rar  hp_single.rar  plain_single.rar
rust_builder/: LICENSE  pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
test/: advanced_playback_controller_test.dart  gyuni_player_controls_test.dart  l10n_test_helper.dart  media_preferences_test.dart  picture_in_picture_window_test.dart  playback_startup_guard_test.dart  player_keyboard_controls_test.dart  rust_bridge_test.dart  screenshots_test.dart  settings_screen_test.dart  smart_canvas_test.dart
tools/: bundle_mpv_framework.py  generate_icons.py
tools/usenews-cli/: Cargo.toml
tools/usenews-cli/src/: main.rs
tools/zanzibarr-cli/: Cargo.toml
tools/zanzibarr-cli/src/: main.rs
windows/: CMakeLists.txt
(+24 files in other folders)
