[package]
name = "rust_lib_usenews"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
crc32fast = "1.5.0"
flutter_rust_bridge = "=2.12.0"
quick-xml = "0.41.0"
thiserror = "2.0.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
