[package]
name = "rust_lib_usenews"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
crc32fast = "1.5.0"
flutter_rust_bridge = "=2.12.0"
quick-xml = "0.41.0"
thiserror = "2.0.18"
tokio = { version = "1.52.4", features = ["net", "io-util", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "logging", "tls12"] }
webpki-roots = "1.0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
tokio = { version = "1.52.4", features = ["macros", "rt-multi-thread"] }
