[package]
name = "rust_lib_usenews"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
crc32fast = "1.5.0"
flutter_rust_bridge = "=2.12.0"
once_cell = "1.21.4"
quick-xml = "0.41.0"
thiserror = "2.0.18"
tokio = { version = "1.52.4", features = ["net", "io-util", "sync", "time", "macros", "rt-multi-thread"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "logging", "tls12"] }
webpki-roots = "1.0.8"
zesven = { version = "1.1.0", default-features = false, features = ["aes", "lzma"] }
zeroize = "1.8.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
tokio = { version = "1.52.4", features = ["macros", "rt-multi-thread"] }
